[package]
name = "rusty_textui"
version = "0.2.0"
edition = "2021"
description = "Library for creating simple text user interfaces, like text arcade games in the terminal "
homepage = "https://github.com/CleanCut/rusty_textui"
repository = "https://github.com/CleanCut/rusty_textui"
readme = "README.md"
keywords = [ "game", "engine", "text", "tui", "ui" ]
categories = [ "game-engines" ]
license = "MIT OR Apache-2.0"
exclude = [ "/.github", "release.toml", "RELEASE.md", ".gitignore" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
